aujout d'un login pour les users ainsi que un systemauth guard pour grder des pages pour uniquement si on est authentifié

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -63,11 +63,11 @@
                   <td
                     [ngStyle]="{
                       color:
-                        facture.statut === 'payée'
+                        removeAccents(facture.statut) === 'payee'
                           ? 'green'
-                          : facture.statut === 'envoyée'
+                          : removeAccents(facture.statut) === 'envoyee'
                           ? 'orange'
-                          : facture.statut === 'brouillon'
+                          : removeAccents(facture.statut) === 'brouillon'
                           ? 'red'
                           : 'black'
                     }"
