ca marche enfin , l'utilisateur peut recupere ses donnes uniquement et les afficher ... cool !!!

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -32,7 +32,7 @@
               </thead>
               <tbody class="custom-tbody">
                 <tr *ngFor="let client of clients">
-                  <td>{{ client.name }}</td>
+                  <td>{{ client.nom }}</td>
                   <td>{{ client.email }}</td>
                   <td>{{ client.telephone }}</td>
                   <td>{{ client.adresse }}</td>
