--- a/frontend/src/app/sidebar/sidebar.component.html
+++ b/frontend/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
 
     <div class="div-btn-sidebar">
-        <a routerLink="/">Acceuil</a><br>
+        <a routerLink="/dashboard">Acceuil</a><br>
     </div>
     <div class="div-btn-sidebar">
         <a routerLink="/clients">Clients</a><br>
