--- a/frontend/src/app/clients-page/clients-page.component.html
+++ b/frontend/src/app/clients-page/clients-page.component.html
@@ -1,2 +1,49 @@
-<p>clients-page works!</p>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Dashboard</title>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+/>
 <app-sidebar></app-sidebar>
+
+<div class="dashboard">
+
+    <div class="container-fluid mt-4">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <div class="card">
+
+                    <div class="custom-table-container">
+                        <table class="custom-table">
+                            <thead>
+        
+                                <tr>
+                                    <th>Nom</th>
+                                    <th>Email</th>
+                                    <th>Téléphone</th>
+                                    <th>Adresse</th>
+                                  </tr>
+        
+                            </thead>
+                            <tbody class="custom-tbody">
+        
+                                <tr *ngFor="let client of clients">
+                                    <td>{{ client.nom }}</td>
+                                    <td>{{ client.email }}</td>
+                                    <td>{{ client.telephone }}</td>
+                                    <td>{{ client.adresse }}</td>
+                                </tr>
+        
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+</div>
