--- a/frontend/src/app/login-register/login-register.component.html
+++ b/frontend/src/app/login-register/login-register.component.html
@@ -1,6 +1,7 @@
-<div class="auth-container">
-    <h2>Register</h2>
+<div class="container">
+    
     <form (ngSubmit)="register()">
+      <h2>Register</h2>
       <div>
         <label for="register-username">Username :</label>
         <input id="register-username" type="text" [(ngModel)]="registerUsername" name="registerUsername" required>
@@ -19,10 +20,9 @@
       <button type="submit">Register</button>
     </form>
   
-    <hr>
-  
-    <h2>Login</h2>
+    
     <form (ngSubmit)="login()">
+      <h2>Login</h2>
       <div>
         <label for="login-username">Username :</label>
         <input id="login-username" type="text" [(ngModel)]="loginUsername" name="loginUsername" required>
