commir de fin des pages de factures. J'ai ajouté les filtrations par type et l'archivage bck et front .

--- a/frontend/src/app/factures-archivees/factures-archivees.component.html
+++ b/frontend/src/app/factures-archivees/factures-archivees.component.html
@@ -27,37 +27,26 @@
           </thead> -->
           <tbody>
             <ng-container *ngFor="let facture of factures">
-              <!-- Ligne principale : Facture -->
-              <ng-container *ngIf="facture.archivee === false">
-                <tr class="table-primary" (dblclick)="facture.statut === 'brouillon' && onDbClickFacture(facture.id)">
+              <ng-container *ngIf="facture.archivee === true && facture.statut === 'payée'">
+                <!-- Ligne principale : Facture -->
+                <tr class="table-primary">
                   <td>{{ facture.numero }}</td>
                   <td>{{ getMontantTotalFacture(facture.id).toFixed(2) }} € HT</td>
                   <td>{{ getMontantTtcFacture(facture.id).toFixed(2) }} € TTC</td>
                   <td>Date d'émission : {{ facture.date_emission }}</td>
                   <td>Date d'écheance : {{ facture.date_echeance }}</td>
-                  <td [ngStyle]="{
-                      color:
-                        facture.statut === 'payée'
-                          ? 'green'
-                          : facture.statut === 'envoyée'
-                          ? 'orange'
-                          : facture.statut === 'brouillon'
-                          ? 'red'
-                          : 'black'
-                    }">{{ facture.statut }}</td>
+                  <td [style]="{ color: facture.statut === 'payée' ? 'green' : 'black' }">{{ facture.statut }}</td>
                   <td>{{ getclientNamebyId(facture.client_id) }}</td>
                   <td
                     *ngIf="facture.statut === 'payée'"
                     tabindex="0"
                     role="button"
-                    (click)="archiver(facture.id)"
-                    (keydown.enter)="archiver(facture.id)"
+                    (click)="desarchiver(facture.id)"
+                    (keydown.enter)="desarchiver(facture.id)"
                     (contextmenu)="$event.preventDefault()"
                   >
-                    <i class="fa fa-archive"></i> Archiver
+                    <i class="fa fa-archive"></i> Desarchiver
                   </td>
-
-                  <td *ngIf="facture.statut !== 'payée'">Archivage après paiement</td>
                 </tr>
 
                 <!-- Sous-lignes : Lignes de la facture -->
@@ -90,7 +79,7 @@
                     </table>
                   </td>
                 </tr>
-              </ng-container>
+                </ng-container>
             </ng-container>
           </tbody>
         </table>
