--- a/frontend/src/app/factures-brouillon/factures-brouillon.component.html
+++ b/frontend/src/app/factures-brouillon/factures-brouillon.component.html
@@ -27,42 +27,26 @@
           </thead> -->
           <tbody>
             <ng-container *ngFor="let facture of factures">
-              <!-- Ligne principale : Facture -->
-              <ng-container *ngIf="facture.archivee === false">
-                <tr class="table-primary" (dblclick)="facture.statut === 'brouillon' && onDbClickFacture(facture.id)">
+              <ng-container *ngIf="!facture.archivee && facture.statut === 'brouillon'">
+                <!-- Ligne principale : Facture -->
+                <tr class="table-primary" (dblclick)="onDbClickFacture(facture.id)">
                   <td>{{ facture.numero }}</td>
                   <td>{{ getMontantTotalFacture(facture.id).toFixed(2) }} € HT</td>
                   <td>{{ getMontantTtcFacture(facture.id).toFixed(2) }} € TTC</td>
                   <td>Date d'émission : {{ facture.date_emission }}</td>
                   <td>Date d'écheance : {{ facture.date_echeance }}</td>
                   <td [ngStyle]="{
-                      color:
-                        facture.statut === 'payée'
-                          ? 'green'
-                          : facture.statut === 'envoyée'
-                          ? 'orange'
-                          : facture.statut === 'brouillon'
-                          ? 'red'
-                          : 'black'
-                    }">{{ facture.statut }}</td>
+                    color:
+                      facture.statut === 'brouillon'
+                        ? 'red'
+                        : 'black'
+                  }">{{ facture.statut }}</td>
                   <td>{{ getclientNamebyId(facture.client_id) }}</td>
-                  <td
-                    *ngIf="facture.statut === 'payée'"
-                    tabindex="0"
-                    role="button"
-                    (click)="archiver(facture.id)"
-                    (keydown.enter)="archiver(facture.id)"
-                    (contextmenu)="$event.preventDefault()"
-                  >
-                    <i class="fa fa-archive"></i> Archiver
-                  </td>
-
-                  <td *ngIf="facture.statut !== 'payée'">Archivage après paiement</td>
                 </tr>
 
                 <!-- Sous-lignes : Lignes de la facture -->
                 <tr class="table-light">
-                  <td colspan="8">
+                  <td colspan="7">
                     <strong>Lignes de la facture :</strong>
                     <table class="table table-sm mt-2">
                       <thead>
@@ -90,7 +74,7 @@
                     </table>
                   </td>
                 </tr>
-              </ng-container>
+                </ng-container>
             </ng-container>
           </tbody>
         </table>
